# qa_guru_19_hw_16

./: README.md  pyproject.toml
